--- a/webserver/package.json
+++ b/webserver/package.json
@@ -5,20 +5,48 @@
   "author": "libin <libchaos01@163.com>",
   "private": true,
   "scripts": {
-    "dev": "backpack dev",
-    "build": "nuxt build && backpack build",
+    "dev": "nodemon -w ./server -w ./start.js --exec node ./start.js",
+    "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "bcrypt": "^1.0.3",
+    "cheerio": "^1.0.0-rc.2",
     "cross-env": "^5.0.1",
+    "ejs": "^2.5.7",
+    "formstream": "^1.1.0",
+    "jsonwebtoken": "^8.0.1",
     "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-jwt": "^3.2.2",
+    "koa-router": "^7.2.1",
+    "koa-session": "^5.5.0",
+    "lodash": "^4.17.4",
+    "mongoose": "^4.11.12",
     "nuxt": "^1.0.0-rc3",
-    "source-map-support": "^0.4.15"
+    "qiniu": "^7.0.8",
+    "qiniu-web-uploader": "^2.1.2",
+    "random-token": "0.0.8",
+    "raw-body": "^2.3.2",
+    "request": "^2.82.0",
+    "request-promise": "^4.2.1",
+    "sha1": "^1.1.1",
+    "source-map-support": "^0.4.15",
+    "vux": "^2.6.3-beta.2",
+    "vux-loader": "^1.1.9",
+    "wechat-pay": "^0.2.5",
+    "xml2js": "^0.4.19",
+    "xss": "^0.3.4"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-plugin-module-alias": "^1.6.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-latest-node": "^0.4.0",
+    "babel-preset-stage-3": "^6.24.1",
     "backpack-core": "^0.3.0",
     "eslint": "^3.13.1",
     "eslint-config-standard": "^10.2.1",
