--- a/webserver/package.json
+++ b/webserver/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^5.0.1",
     "ejs": "^2.5.7",
     "formstream": "^1.1.0",
+    "iview": "^2.3.2",
     "jsonwebtoken": "^8.0.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
