--- a/webserver/package.json
+++ b/webserver/package.json
@@ -19,7 +19,9 @@
     "ejs": "^2.5.7",
     "formstream": "^1.1.0",
     "iview": "^2.3.2",
+    "jayson": "^2.0.4",
     "jsonwebtoken": "^8.0.1",
+    "kcors": "^2.2.1",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-jwt": "^3.2.2",
