--- a/webserver/package.json
+++ b/webserver/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nodemon -w ./server -w ./start.js --exec node ./start.js",
     "build": "nuxt build",
+    "ngrok": "./server/bin/sunny clientid 0ec2900e67569469",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
@@ -38,8 +39,9 @@
     "request-promise": "^4.2.1",
     "sha1": "^1.1.1",
     "source-map-support": "^0.4.15",
-    "vux": "^2.6.3-beta.2",
-    "vux-loader": "^1.1.9",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vuetify": "^0.15.7",
     "wechat-pay": "^0.2.5",
     "xml2js": "^0.4.19",
     "xss": "^0.3.4"
