--- a/webserver/package.json
+++ b/webserver/package.json
@@ -30,9 +30,11 @@
     "koa-session": "^5.5.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.12",
+    "nodejieba": "^2.2.5",
     "nuxt": "^1.0.0-rc3",
     "qiniu": "^7.0.8",
     "qiniu-web-uploader": "^2.1.2",
+    "ramda": "^0.24.1",
     "random-token": "0.0.8",
     "raw-body": "^2.3.2",
     "request": "^2.82.0",
