add es component

--- a/webserver/package.json
+++ b/webserver/package.json
@@ -29,6 +29,7 @@
     "koa-router": "^7.2.1",
     "koa-session": "^5.5.0",
     "lodash": "^4.17.4",
+    "mongoosastic": "^4.3.0",
     "mongoose": "^4.11.12",
     "nodejieba": "^2.2.5",
     "nuxt": "^1.0.0-rc3",
